--- a/html/css/style.css
+++ b/html/css/style.css
@@ -26,8 +26,9 @@ p {
 }
 
 .border {
-	border-style: solid;
-	border-width: 1px;
+	border-style: dashed;
+	border-width: 3px;
+	border-color: yellow;
 }
 
 /* 아이디 셀렉터 */
