--- a/game/css/style.css
+++ b/game/css/style.css
@@ -2,13 +2,15 @@
 	border: 1px black solid;
 	height: 90vh;
 	position: relative;
+	width: 1200px;
+	height: 600px;
 }
 
 #mario {
 	width: 200px;
 	height: 200px;
 	position: absolute;
-	bottom: 50px;
+	bottom: 150px;
 	left: 20px;
 }
 
@@ -16,7 +18,7 @@
 	width: 120px;
 	height: 120px;
 	position: absolute;
-	bottom: 50px;
+	bottom: 150px;
 	right: 50px;
 }
 
@@ -25,8 +27,26 @@
 	width: 100px;
 	position: absolute;
 	left: 200px;
-	bottom: 70px;
-	display: none;
+	bottom: 170px;
+	display: none;	
+}
 
-	
+.background {
+	width: 100%;
+	height: 100%;
+	margin: 0 auto;
+	background-image: url('../assets/back.png'); /*상대경로*/
+	background-repeat: no-repeat;
+	background-position: center center;
+	background-size: cover;
+	animation: slide 30s linear infinite;
+}
+
+@keyframes slide {
+	from {
+		transform: translate(0,0);
+	}
+	to {
+		transform: translate(-1960px, 0);
+	}
 }
