--- a/game/css/style.css
+++ b/game/css/style.css
@@ -1,9 +1,59 @@
+body {
+	overflow: hidden;
+}
+
 .container {
+	display: flex;
+	margin: 0;
+	padding: 0;
 	border: 1px black solid;
-	height: 90vh;
 	position: relative;
-	width: 1200px;
-	height: 600px;
+	height: 900px;
+}
+
+.button {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	height: inherit;
+}
+
+#startTitle {
+	position: relative;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	position: relative;
+	height: inherit;
+}
+
+#game_start_button {
+	font-family: 'New Super Mario Font U', sans-serif;
+	font-size: xx-large;
+	background-color: tomato;
+	border: none;
+	color: white;
+	position: relative;
+}
+
+#gameoverTitle {
+	border: none;
+	position: relative;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	height: inherit;
+}
+
+#score {
+	position: absolute;
+	left: 20px;
+	top: 0px;
+	font-family: 'New Super Mario Font U', sans-serif;
+	font-size: 36px;
+	font-weight: bold;
 }
 
 #mario {
@@ -14,7 +64,14 @@
 	left: 20px;
 }
 
-#goomba {
+#mario_main {
+	width: 200px;
+	height: 200px;
+	position: relative;
+	margin: 0 auto;
+}
+
+#fish {
 	width: 120px;
 	height: 120px;
 	position: absolute;
@@ -23,30 +80,43 @@
 }
 
 #killer {
-	transform: scaleX(-1); /*좌우반전*/
+	transform: scaleX(-1);
+	/*좌우반전*/
 	width: 100px;
 	position: absolute;
 	left: 200px;
 	bottom: 170px;
-	display: none;	
+	display: none;
+}
+
+#down {
+	display: none;
 }
 
 .background {
+	display: flex;
 	width: 100%;
-	height: 100%;
-	margin: 0 auto;
-	background-image: url('../assets/back.png'); /*상대경로*/
-	background-repeat: no-repeat;
-	background-position: center center;
-	background-size: cover;
-	animation: slide 30s linear infinite;
+	height: 900px;
+	background-image: url('../assets/back_water.jpg');
+	/*상대경로*/
+	animation: slide 10s linear infinite;
+	background-position: 0 center;
+}
+
+.background_main {
+	width: 100%;
+	height: 900px;
+	background-image: url('../assets/back_water.jpg');
+	/*상대경로*/
+	background-position: 0 center;
 }
 
 @keyframes slide {
-	from {
-		transform: translate(0,0);
+	0% {
+		background-position: 0 center;
 	}
-	to {
-		transform: translate(-1960px, 0);
+
+	100% {
+		background-position: -3360px center;
 	}
 }
